[gd_scene load_steps=6 format=3 uid="uid://cjbrx20evdha"]

[ext_resource type="Script" path="res://scene/player/player.gd" id="1_nkbru"]
[ext_resource type="Script" path="res://scene/player/Dash.gd" id="2_i2jxw"]
[ext_resource type="Script" path="res://scene/player/Knockback.gd" id="4_axiox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqkd0"]
size = Vector2(32, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_amned"]
size = Vector2(34, 34)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(21, 20)
script = ExtResource("1_nkbru")

[node name="Panel" type="ColorRect" parent="."]
modulate = Color(1, 0, 0.121569, 1)
offset_right = 32.0
offset_bottom = 32.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 27)
shape = SubResource("RectangleShape2D_yqkd0")

[node name="Dash" type="Node2D" parent="."]
script = ExtResource("2_i2jxw")

[node name="DashTimer" type="Timer" parent="Dash"]
one_shot = true

[node name="DashDelay" type="Timer" parent="Dash"]
one_shot = true

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_amned")

[node name="labels" type="Node2D" parent="."]

[node name="identity" type="Label" parent="labels"]
offset_left = -4.0
offset_top = -84.0
offset_right = 46.0
offset_bottom = -58.0
text = "player"

[node name="health_status" type="Label" parent="labels"]
offset_left = -2.0
offset_top = -54.0
offset_right = 38.0
offset_bottom = -31.0

[node name="pinalty_status" type="Label" parent="labels"]
offset_left = -2.0
offset_top = -33.0
offset_right = 38.0
offset_bottom = -10.0

[node name="Knockback" type="Node2D" parent="."]
script = ExtResource("4_axiox")

[node name="StuntTimer" type="Timer" parent="Knockback"]
one_shot = true

[node name="imune" type="Timer" parent="."]
one_shot = true

[node name="direction_arrow" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="direction_arrow"]
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Dash/DashTimer" to="Dash" method="_on_dash_timer_timeout"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
